--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,36 @@
 [platformio]
 
 [env:esp32s2dev]
-platform = espressif32
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.01/platform-espressif32.zip
+;platform = espressif32@6.2.0
 framework = arduino
 board = esp32-s2-saola-1
 lib_ldf_mode = off
 lib_deps=WiFi
 build_flags = -DCORE_DEBUG_LEVEL=5
 monitor_speed = 115200
-upload_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+
+[env:esp32dev]
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.01/platform-espressif32.zip
+;platform = espressif32@6.2.0
+framework = arduino
+board = esp32dev
+lib_ldf_mode = off
+lib_deps=WiFi
+build_flags = -DCORE_DEBUG_LEVEL=5
+monitor_speed = 115200
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+
+[env:esp32c3]
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.00/platform-espressif32.zip
+framework = arduino
+board = esp32-c3-devkitm-1
+lib_ldf_mode = off
+lib_deps=WiFi
+build_flags = -DCORE_DEBUG_LEVEL=5
+monitor_speed = 115200
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
